--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
     <head>
         <meta charset="utf-8">
         <title>Guess Who?</title>
+        <script src="jquery-3.6.0.js"></script>
         <script src="data.js"></script>
         <script src="client.js"></script>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <header>
+            Who is <span id="whoTarg"></span>
+        </header>
+
+        <main id="target">
+
+        </main>
         
     </body>
 </html>
+
+
