--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Guess Who?</title>
         <script src="jquery-3.6.0.js"></script>
         <script src="data.js"></script>
-        <script src="client.js"></script>
+        <script src="newclient.js"></script>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
